<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufrn.imd.budget.EditItemActivity" >

	<LinearLayout
		android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText
			android:id="@+id/editTextTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textCapWords"
			android:singleLine="true" >
			<requestFocus />
		</EditText>

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/value"
			android:textAppearance="?android:attr/textAppearanceMedium" />
  
		<EditText
		    android:id="@+id/editTextValue"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:inputType="numberDecimal" />

		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/due_date"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<DatePicker
		    android:id="@+id/datePickerDueDate"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:calendarViewShown="false" />

		<CheckBox
		    android:id="@+id/checkBoxDone"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/mark_as_done"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp" >
		    
		    <Button
		        android:id="@+id/saveButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/save"
		        android:textStyle="bold" />

		    <Button
		        android:id="@+id/deleteButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:text="@string/delete"
		        android:textColor="#ff0000" />

		</LinearLayout>

	</LinearLayout>

</RelativeLayout>
